# zjAdventure

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json  zj草稿.doc  角色一览表.csv  道具一览表.csv
.github/workflows/: cmake-single-platform.yml
include/: Game.h  IAction.h  ICharacter.h  IGameService.h  IGameStatus.h  IItem.h  ILogService.h  ILogger.h  IReactable.h  IReactiable.h  ISelectableTarget.h  ITargetSelector.h  IndexGenerator.h  dllexport.h  lib.h
scripts/: README.md  install-deps.bat  install-deps.sh
src/: CMakeLists.txt
src/Action/: Action.h  Actions.h  CMakeLists.txt  DamageAction.h  NormalDamage.h
src/Action/Damage/: NormalDamage.h
src/Character/: CMakeLists.txt  Character.cpp  Character.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h  GameService.h  ItemManager.cpp  ItemManager.h
src/Item/: CMakeLists.txt  Condition.cpp  Condition.h  Item.cpp  Item.h  NormalAttack.cpp  NormalAttack.h  Status.cpp  Status.h
src/Item/Attack/: NormalAttack.cpp  NormalAttack.h
src/Item/Status/: Stun.cpp  Stun.h
src/Logger/: CMakeLists.txt  Logger.h  LoggerStream.cpp  LoggerStream.h  SpdLogger.cpp  SpdLogger.h
src/Service/: CMakeLists.txt  GameService.h
src/Util/: CMakeLists.txt  DamageCalculator.h  Utils.cc  Utils.cpp  Utils.h
src/testlib/: CMakeLists.txt  lib.cpp
templates/: index.html
web/js/: game.js
web/src/: App.css  App.tsx
web/src/components/: Actions.tsx  CharacterCard.tsx  ControlsPanel.tsx  GameHeader.tsx  GameStateIndicator.tsx  HealthBar.tsx  ItemsSection.tsx  StatsGrid.tsx  index.tsx
web/src/consts/: ActionType.tsx  GameStatus.tsx  InitialGameData.tsx  index.tsx
web/src/utils/: Actions.tsx  Items.tsx  Time.tsx  index.tsx
web/templates/: index.html
